# IBL-Brain-Wide-Map

./: .gitignore  CITATION.cff  README.md  pyproject.toml
core-tbi/: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
core-tbi/configs/: datasets.yaml  default.yaml  demo.yaml  feature_model.yaml  pose_model.yaml
core-tbi/docs/: compensation_definition.md  data_dictionary.md  dataset_catalog.md  novelty_statement.md  prospective_rat_protocol.md  scientific_rationale.md  validation_plan.md
core-tbi/scripts/: inspect_dataset.py  run_demo.py
core-tbi/src/core_tbi/: __init__.py  cli.py  registry.py  reproducibility.py  schemas.py
core-tbi/src/core_tbi/evaluation/: __init__.py  leakage_checks.py  metrics.py  splitting.py
core-tbi/src/core_tbi/models/: __init__.py  baseline.py  conventional.py
core-tbi/src/core_tbi/visualization/: __init__.py  recovery_plane.py  reports.py
core-tbi/tests/: test_alma_blocks.py  test_dataset_registry.py  test_dlc_parser.py  test_group_splits.py  test_leakage.py  test_recovery_scores.py
decision_geometry/: __init__.py  analysis.py  cli.py  config.py  data.py  pipeline.py  plotting.py
results/: summary.json
scripts/: export_web_payload.py
tests/: test_analysis.py  test_cli.py  test_data.py
web/: README.md  package-lock.json  package.json
web/.openai/: hosting.json
web/app/: analysis-data.json  globals.css  layout.tsx  page.tsx
web/tests/: rendered-html.test.mjs
